<resources>
    <string name="app_name">Chat App</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="label_signup">Sign up</string>
    <string name="label_login">Log in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="btn_save">Save</string>
    <string name="btn_log_out">Log out</string>
    <string name="label_chat">Chat</string>
    <string name="type_message">Type Message</string>
</resources>