<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.SignUp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_signup"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gilroy_bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:inputType="text"
            android:fontFamily="@font/gilroy_light"
            android:background="@color/colorTextBackground"
            android:hint="@string/enter_name"
            android:padding="12dp"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/gilroy_light"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="15dp"
            android:background="@color/colorTextBackground"
            android:hint="@string/enter_email"
            android:padding="12dp"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_light"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:layout_marginEnd="15dp"
            android:background="@color/colorTextBackground"
            android:hint="@string/enter_password"
            android:padding="12dp"
            android:textColor="@color/colorText"  />
        <EditText
            android:id="@+id/cfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_light"
            android:layout_marginStart="15dp"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorTextBackground"
            android:hint="@string/enter_confirm_password"
            android:padding="12dp"
            android:textColor="@color/colorText"  />
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="15dp"
            android:textColor="@color/colorAccent"
            android:text="@string/btn_sign_up"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorDarkGray"
            android:textColor="@color/colorAccent"
            android:text="@string/btn_login"/>
    </LinearLayout>

</LinearLayout>